--- a/package.json
+++ b/package.json
@@ -16,27 +16,24 @@
   "author": "Securrency Inc.",
   "license": "MIT",
   "dependencies": {
-    "@truffle/workflow-compile": "^3.2.6",
-    "chai": "^4.3.4",
-    "crypto": "^1.0.1",
+    "@truffle/workflow-compile": "3.2.48",
+    "chai": "4.3.7",
+    "crypto": "1.0.1",
     "ethersfathom": "0.4.0",
-    "glob": "^7.2.0",
-    "mocha": "^9.1.3",
-    "node-fetch": "^2.6.1",
-    "rimraf": "^3.0.2",
+    "glob": "7.2.3",
+    "mocha": "9.2.2",
+    "node-fetch": "2.6.9",
+    "rimraf": "3.0.2",
     "solc": "0.8.10",
-    "spawn-promise": "^0.1.8",
-    "web3": "^1.6.1",
-    "web3-utils": "^1.6.1",
-    "whiskers": "^0.4.0"
+    "spawn-promise": "0.1.8",
+    "web3": "1.9.0",
+    "web3-utils": "1.9.0",
+    "whiskers": "0.4.0"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "webpack": "^5.10.0",
-    "webpack-cli": "^4.7.2"
-  },
-  "overrides": {
-    "@truffle/events": "0.1.6"
+    "clean-webpack-plugin": "3.0.0",
+    "copy-webpack-plugin": "7.0.0",
+    "webpack": "5.77.0",
+    "webpack-cli": "4.10.0"
   }
 }
